# mmorpg-prototype-login-server

./: .env.example  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.dev  README.md  changelog.md  config.json  copy_includes.sh  docker-compose.dev.yml  docker-compose.yml  main.cpp  mmo_prototype_dump.sql  mmo_prototype_dump_pre_cleanup.sql  new_server.cpp  new_server_v0_1.cpp  new_server_v0_2.cpp  server.cpp  usefull_info.txt  watch_and_run.sh
docs/: login-server-api.md
include/data/: ClientData.hpp  DataStructs.hpp  SpecialStructs.hpp
include/events/: Event.hpp  EventHandler.hpp  EventQueue.hpp
include/game_server/: GameServer.hpp
include/helpers/: Config.hpp  Database.hpp
include/login_server/: Authenticator.hpp  CharacterManager.hpp  ClientData.hpp  LoginServer.hpp  LoginServer1.hpp
include/network/: NetworkManager.hpp
include/services/: AccountManager.hpp  Authenticator.hpp  CharacterManager.hpp
include/utils/: Config.hpp  Database.hpp  DatabasePool.hpp  JSONParser.hpp  JsonAssertFix.hpp  Logger.hpp  ResponseBuilder.hpp  TerminalColors.hpp  ThreadPool.hpp  TimestampUtils.hpp
migrations/: 001_schema_improvements.sql  041_mastery_quest_rep_durability.sql  042_title_condition_params.sql  043_world_interactive_objects.sql  058_game_analytics.sql  059_stats_system_overhaul.sql  060_clean_modifiers_prune_mobs.sql  061_zone_shapes.sql  062_game_zone_shapes.sql  063_drop_npc_position.sql  064_new_skills_class_restriction.sql  064b_fix_formula_slugs.sql  065_skill_status_effects.sql  066_utility_skill_school.sql  067_player_skill_cooldown.sql  068_class_starter_items.sql  069_class_spawn_zone_respawn_bounds.sql  070_items_mobs_loot_overhaul.sql  071_character_online_playtime.sql  072_cleanup_columns.sql  073_client_version.sql  074_inventory_unique.sql  075_mastery_target_attr.sql  076_whirlwind_price.sql  077_swift_feet_passive.sql  078_move_speed_default.sql  079_mastery_progression_slower.sql  080_mob_balance_reputation_bosses.sql  081_movement_validation_config.sql
old_server/: CMakeLists.txt
scripts/: db.sh  dump_db.sh  load_dump.sh
src/: config.json  main.cpp
src/data/: ClientData.cpp
src/events/: Event.cpp  EventHandler.cpp  EventQueue.cpp
src/game_server/: GameServer.cpp
src/helpers/: Config.cpp  Database.cpp
src/login_server/: Authenticator.cpp  CharacterManager.cpp  ClientData.cpp  LoginServer.cpp  LoginServer1.cpp
src/network/: NetworkManager.cpp
src/services/: AccountManager.cpp  Authenticator.cpp  CharacterManager.cpp
src/utils/: Config.cpp  Database.cpp  DatabasePool.cpp  JSONParser.cpp  Logger.cpp  ThreadPool.cpp  TimestampUtils.cpp
vscode_debug_config/: launch.json
